# Barter-Platform

./: .env.example  README.md  ads_fixture.json  pyproject.toml
ads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ad_user.py
ads/templates/ads/: ad_confirm_delete.html  ad_detail.html  ad_form.html  ad_list.html  base.html  contacts.html  exchangeproposal_confirm_delete.html  exchangeproposal_detail.html  exchangeproposal_form.html  exchangeproposal_list.html  header.html  search_results.html
config/: settings.py  urls.py  views.py
templates/: error.html
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: logged_out.html  login.html  register.html  user_detail.html  user_form.html
