[project]
name = "testproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Volkov",email = "markasch67@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
coverage = "^7.9.2"

[tool.black]
line-length = 119

[tool.mypy]
ignore_missing_imports = true
exclude = "(^|/)(migrations|config)/"
